--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,13 @@
   <version>0.0.1-SNAPSHOT</version>
   <packaging>hpi</packaging>
 
+  <dependencies>
+    <dependency>
+      <groupId>org.jenkins-ci.main</groupId>
+      <artifactId>maven-plugin</artifactId>
+      <version>${project.parent.version}</version>
+    </dependency>
+  </dependencies>
   <!-- get every artifact through repo.jenkins-ci.org, which proxies all the artifacts that we need -->
   <repositories>
     <repository>
